Add spouse member. Add child of members

--- a/src/EventTrackerAdminWeb/Views/Membership/EditMember.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/EditMember.cshtml
@@ -6,18 +6,43 @@
 }
 <div class="panel">
     <div class="panel-heading">
-        <h3>@Model.FullName</h3>
-        @if (Model.SpouseMemberId > 0) {
-            @Html.ActionLink("Spouse: " + @Model.SpouseName, "EditMember", new { memberId = @Model.SpouseMemberId }, new { @class = "btn btn-primary" })
+        <h3>
+            @if (Model.MemberId > 0)
+            {
+                @Model.FullName
+            }
+            else
+            {
+                @ViewBag.PanelHeading
+                ;
+            }
+        </h3>
+
+        @if (Model.SpouseMemberId.HasValue && Model.SpouseMemberId.Value > 0)
+        {
+            @Html.ActionLink("Spouse: " + @Model.SpouseName, "EditMember", new {memberId = @Model.SpouseMemberId}, new {@class = "btn btn-primary"})
+        }
+        else {
+            if (Model.MemberId > 0 && Model.MemberOf != "KFC" && Model.MemberOf != "YFC") {
+                @Html.ActionLink("Add Spouse", "AddSpouse", new { spouseMemberId = @Model.MemberId, spouseName = @Model.FullName, gender=@Model.Gender }, new { @class = "btn btn-primary" })
+            }
         }
         @if (Model.HouseHoldId.HasValue) {
             @Html.ActionLink("Household: " + @Model.HouseholdName, "EditHousehold", new { controller= "HouseHold", householdid = @Model.HouseHoldId }, new { @class = "btn btn-primary" })
         }
+        @if (Model.MemberId > 0 && Model.MemberOf!="KFC" && Model.MemberOf!="YFC") {
+            @Html.ActionLink("Add Children", "AddChild", new { parentMemberId = @Model.MemberId }, new { @class = "btn btn-primary" })
+        }
+
+
     </div>
 
     @using (Html.BeginForm("EditMember", "Membership")) {
         <div class="panel-body">
             @Html.HiddenFor(m => m.MemberId)
+            @Html.HiddenFor(m => m.SpouseMemberId)
+            @Html.HiddenFor(m => m.FatherMemberId)
+            @Html.HiddenFor(m => m.MotherMemberId)
 
             @foreach (var property in ViewData.ModelMetadata.Properties) {
 
@@ -40,6 +65,10 @@
                         break;
                     case "HouseholdName":
                         break;
+                    case "FatherMemberId":
+                        break;
+                    case "MotherMemberId":
+                        break;
                     default:
                         <div class="form-group">
                             @if (property.PropertyName == "DateOfBirth") {
@@ -57,11 +86,17 @@
                                     }
                                 }*@
                             else if (property.PropertyName == "Gender") {
+                                <label>@(property.DisplayName ?? property.PropertyName)</label>
                                 @Html.RadioButtonFor(m => m.Gender, "Male", Model.Gender == "M" ? new { Checked = "checked" } : null)
                                 <span>Male</span>
                                 @Html.RadioButtonFor(m => m.Gender, "Female", Model.Gender == "F" ? new { Checked = "checked" } : null)  <span>Female</span>
                             }
-
+                            else if (property.PropertyName == "IsHeadOfFamily") {
+                                <label>@(property.DisplayName ?? property.PropertyName)</label>
+                                @Html.RadioButtonFor(m => m.IsHeadOfFamily, "Y", Model.Gender == "Y" ? new { Checked = "checked" } : null)
+                                <span>Yes</span>
+                                @Html.RadioButtonFor(m => m.IsHeadOfFamily, "N", Model.Gender == "N" ? new { Checked = "checked" } : null)  <span>No</span>
+                            }
                             else {
                                 <label>@(property.DisplayName ?? property.PropertyName)</label>
                                 @Html.TextBox(property.PropertyName, null,
