--- a/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
@@ -37,13 +37,15 @@
                 <tr>
                     <td>@Html.ActionLink(item.LastName, "EditMember", new {item.MemberId})</td>
                     <td class="text-right">@item.FirstName</td>
-                    @if (item.MemberOf == "KFC" || item.MemberOf == "YFC" || item.MemberOf == "SFC") {
-                        <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
-                    }
-                    else {
-                        <td class="text-right">@item.MemberOf</td>
-                    }
-                    
+                    <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new {memberId = item.MemberId, memberOf = item.MemberOf})</td>
+                    @*
+    @if (item.MemberOf == "KFC" || item.MemberOf == "YFC" || item.MemberOf == "SFC" || item.MemberOf=="CFC") {
+        <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
+    }
+    else {
+        <td class="text-right">@item.MemberOf</td>
+    }
+                    *@
                     <td class="text-right">@item.HouseholdName</td>
                     <td class="text-center">
                         @using (Html.BeginForm("Delete", "Membership"))
