Add HH functionality

--- a/src/EventTrackerAdminWeb/Views/HouseHold/HouseHolds.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/HouseHolds.cshtml
@@ -58,7 +58,7 @@
                 <th>Count</th>
                 <th>
                     <div class="pull-right">
-                        @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add New Household", "Create", "NewHouseHold", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
+                        @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add New Household", "Create", "Household", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
                     </div>
                 </th>
             </tr>
