--- a/src/EventTrackerAdminWeb/Views/HouseHold/EditHousehold.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/EditHousehold.cshtml
@@ -5,29 +5,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("EditHousehold", "HouseHold")) {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <h4>Household</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.HouseHold.HouseHoldId)
-        @Html.HiddenFor(model => model.HouseHold.HouseHoldLeaderMemberId)
-        
+        @Html.HiddenFor(model => model.HouseHoldId)
+        @*
+    @Html.HiddenFor(model => model.HouseHoldLeaderMemberId)
+        *@
+        @if (Model.HouseHoldId <= 0) {
+            <div class="form-group">
+                @Html.LabelFor(model => model.HouseHoldLeaderMemberId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("HouseHoldLeaderMemberId", Model.HeadOfFamilyMembersList, "-- Select HH Leader --", new {@class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.HouseHoldLeaderMemberId, "", new {@class = "text-danger"})
+                </div>
+            </div>
+        }
+
         <div class="form-group">
-            @Html.LabelFor(model => model.HouseHold.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HouseHold.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HouseHold.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HouseHold.Area, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HouseHold.Area, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HouseHold.Area, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Area, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Area, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -49,12 +60,13 @@
     </div>
 </div>
 @**@
+@if (Model.HouseHoldId > 0) {
     <div class="row">
         <div class="col-md-offset-2 col-md-10" id="replacetarget">
-            @{ Html.RenderAction("HouseholdMembers", "HouseHold", new { householdId = Model.HouseHold.HouseHoldId , houseHoldLeaderMemberId = Model.HouseHold.HouseHoldLeaderMemberId}); }
+            @{ Html.RenderAction("HouseholdMembers", "HouseHold", new { householdId = Model.HouseHoldId, houseHoldLeaderMemberId = Model.HouseHoldLeaderMemberId }); }
         </div>
     </div>
-
+}
 <p>
     @Html.ActionLink("Back to List", "Households")
 
