--- a/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
@@ -10,7 +10,6 @@
     <h>Members</h>
 </div>
 <div class="panel-body">
-
     <table class="table table-striped table-condensed table-bordered">
         <tr>
             <th class="text-right">
@@ -28,13 +27,15 @@
                 <td class="text-right">@item.FirstName</td>
                 <td class="text-right">@item.MemberOf</td>
                 <td class="text-center">
-                    @using (Html.BeginForm("RemoveMemberFromHousehold", "Household", new {memberId = item.MemberId}))
-                    {
-                        @Html.Hidden("MemberId", item.MemberId)
-                        <input type="submit"
-                               class="btn btn-default btn-xs"
-                               value="Remove"/>
+                    @if (item.IsHeadOfFamily=="Y") {
+                        using (Html.BeginForm("RemoveMemberFromHousehold", "Household", new { memberId = item.MemberId, householdId = ViewBag.HouseHoldId })) {
+                            @Html.Hidden("MemberId", item.MemberId)
+                            <input type="submit"
+                                   class="btn btn-default btn-xs"
+                                   value="Remove" />
+                        }
                     }
+
                 </td>
             </tr>
         }
