--- a/src/EventTrackerAdminWeb/Views/Events/Edit.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Edit.cshtml
@@ -50,8 +50,7 @@
         <div class="panel-footer">
             <input type="submit" value="Save" class="btn btn-primary" />
             @Html.ActionLink("Cancel and return to List", "Index", null, new {
-           @class = "btn btn-default"
-       })
+           @class = "btn btn-default"})
         </div>
     }
 </div>
