--- a/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
@@ -6,28 +6,28 @@
 @model PagedList.IPagedList<EventTracker.BusinessModel.Membership.Member>
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
 
-<div class="panel-heading">
-    <h>Members</h>
+<div class="panel-heading">Members
 </div>
 <div class="panel-body">
-    <table class="table table-striped table-condensed table-bordered">
+    @*<table class="table table-striped table-condensed table-bordered">*@
+    <table class="table">
         <tr>
             <th class="text-right">
-                @Html.ActionLink("Last Name", "EditHousehold", new { householdId = ViewBag.HouseholdId, houseHoldLeaderMemberId =ViewBag.HouseHoldLeaderMemberId, sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
+                @Html.ActionLink("Last Name", "EditHousehold", new { householdId = ViewBag.HouseholdId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId, sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
             </th>
             <th class="text-right">Firstname</th>
             <th class="text-right">MemberOf</th>
             <th>
-                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add", "AddMemberToHouseHold", "Household", routeValues: new { houseHoldId = ViewBag.HouseHoldId, houseHoldLeaderMemberId=ViewBag.HouseHoldLeaderMemberId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right" })
+                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add", "AddMemberToHouseHold", "Household", routeValues: new { houseHoldId = ViewBag.HouseHoldId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right" })
             </th>
         </tr>
         @foreach (var item in Model) {
             <tr>
-                <td>@Html.ActionLink(item.LastName, "EditMember", new { controller="Membership", item.MemberId })</td>
+                <td>@Html.ActionLink(item.LastName, "EditMember", new { controller = "Membership", item.MemberId })</td>
                 <td class="text-right">@item.FirstName</td>
                 <td class="text-right">@item.MemberOf</td>
                 <td class="text-center">
-                    @if (item.IsHeadOfFamily=="Y") {
+                    @if (item.IsHeadOfFamily == "Y") {
                         using (Html.BeginForm("RemoveMemberFromHousehold", "Household", new { memberId = item.MemberId, householdId = ViewBag.HouseHoldId })) {
                             @Html.Hidden("MemberId", item.MemberId)
                             <input type="submit"
@@ -40,11 +40,12 @@
             </tr>
         }
     </table>
-    <br />
+
+    <br/>
     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
     @Html.PagedListPager(Model, page => Url.Action("HouseholdMembers",
-    new { page, householdId = ViewBag.HouseholdId }))
+        new {page, householdId = ViewBag.HouseholdId}))
 </div>
 
 <script type="text/javascript">
