Change IsHeadOfFamily to bool

--- a/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
@@ -27,7 +27,7 @@
                 <td class="text-right">@item.FirstName</td>
                 <td class="text-right">@item.MemberOf</td>
                 <td class="text-center">
-                    @if (item.IsHeadOfFamily == "Y") {
+                    @if (item.IsHeadOfFamily) {
                         using (Html.BeginForm("RemoveMemberFromHousehold", "Household", new { memberId = item.MemberId, householdId = ViewBag.HouseHoldId })) {
                             @Html.Hidden("MemberId", item.MemberId)
                             <input type="submit"
