--- a/src/EventTrackerAdminWeb/Views/Events/Index.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Index.cshtml
@@ -11,34 +11,41 @@
     <div class="panel-heading">
         <h>Events</h>
     </div>
-    <div class="panel-body">
-        <table class="table table-striped table-condensed table-bordered">
-            <tr>
-                <th class="text-right">ID</th>
-                <th>Name</th>
-                <th class="text-right">Date</th>
-                <th class="text-center"></th>
-            </tr>
-            @foreach (var item in Model) {
+    @if (Model != null)
+    {
+        <div class="panel-body">
+            <table class="table table-striped table-condensed table-bordered">
                 <tr>
-                    <td class="text-right">@item.EventId</td>
-                    <td>@Html.ActionLink(item.EventName, "Edit", new { item.EventId})</td>
-                    <td class="text-right">@item.EventDate.ToString("MMM dd, yyyy")</td>
-                    <td class="text-center">
-                        @using (Html.BeginForm("Delete", "Events")) {
-                            @Html.Hidden("EventId", item.EventId)
-                            <input type="submit"
-                                   class="btn btn-default btn-xs"
-                                   value="Delete" />
-                        }
-                    </td>
+                    <th class="text-right">ID</th>
+                    <th>Name</th>
+                    <th class="text-right">Date</th>
+                    <th class="text-center"></th>
                 </tr>
-            }
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td class="text-right">@item.EventId</td>
+                        <td>@Html.ActionLink(item.EventName, "Edit", new { item.EventId })</td>
+                        <td class="text-right">@item.EventDate.ToString("MMM dd, yyyy")</td>
+                        <td class="text-center">
+                            @using (Html.BeginForm("Delete", "Events"))
+                    {
+                                @Html.Hidden("EventId", item.EventId)
+                                <input type="submit"
+                                       class="btn btn-default btn-xs"
+                                       value="Delete" />
+                            }
+                        </td>
+                    </tr>
+                }
+
             </table>
         </div>
-        <div class="panel-footer">
-            @Html.ActionLink("Add a new event", "Create", null,
-                new { @class = "btn btn-default" })
-        </div>
-    </div>	
+    }
+
+    <div class="panel-footer">
+        @Html.ActionLink("Add a new event", "Create", null,
+            new { @class = "btn btn-default" })
+    </div>
+</div>	
 
