--- a/src/EventTrackerAdminWeb/Views/HouseHold/EditHousehold.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/EditHousehold.cshtml
@@ -56,7 +56,7 @@
         </div>
         <div class="panel-footer">
             <input type="submit" value="Save" class="btn btn-primary" />
-            @Html.ActionLink("Cancel and return to List", "Households", null, new { @class = "btn btn-default" })
+            @Html.ActionLink("Cancel and return to List", "List", null, new { @class = "btn btn-default" })
         </div>
     }
 
@@ -84,7 +84,7 @@
 @**@
 
     <p>
-        @Html.ActionLink("Back to List", "Households")
+        @Html.ActionLink("Back to List", "List")
 
     </p>
 
