--- a/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/HouseHold/_Members.cshtml
@@ -12,31 +12,15 @@
     @*<table class="table table-striped table-condensed table-bordered">*@
     <table class="table">
         <tr>
-            <th class="text-right">
-                @Html.ActionLink("Last Name", "EditHousehold", new { householdId = ViewBag.HouseholdId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId, sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
-            </th>
+            <th class="text-right">Lastname</th>
             <th class="text-right">Firstname</th>
             <th class="text-right">MemberOf</th>
-            <th>
-                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add", "AddMemberToHouseHold", "Household", routeValues: new { houseHoldId = ViewBag.HouseHoldId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right" })
-            </th>
         </tr>
         @foreach (var item in Model) {
             <tr>
-                <td>@Html.ActionLink(item.LastName, "EditMember", new { controller = "Membership", item.MemberId })</td>
+                <td class="text-right">@item.LastName</td>
                 <td class="text-right">@item.FirstName</td>
                 <td class="text-right">@item.MemberOf</td>
-                <td class="text-center">
-                    @if (item.IsHeadOfFamily) {
-                        using (Html.BeginForm("RemoveMemberFromHousehold", "Household", new { memberId = item.MemberId, householdId = ViewBag.HouseHoldId })) {
-                            @Html.Hidden("MemberId", item.MemberId)
-                            <input type="submit"
-                                   class="btn btn-default btn-xs"
-                                   value="Remove" />
-                        }
-                    }
-
-                </td>
             </tr>
         }
     </table>
@@ -47,48 +31,6 @@
     @Html.PagedListPager(Model, page => Url.Action("HouseholdMembers",
         new {page, householdId = ViewBag.HouseholdId}))
 </div>
-
-<script type="text/javascript">
-
-    
-    $(function () {
-       
-        $.ajaxSetup({ cache: false });
-        $("a[data-modal]").on("click", function (e) {
-            // hide dropdown if any (this is used wehen invoking modal from link in bootstrap dropdown )
-            //$(e.target).closest('.btn-group').children('.dropdown-toggle').dropdown('toggle');
-            $('#myModalContent').load(this.href, function () {
-                $('#myModal').modal({
-                    /*backdrop: 'static',*/
-
-                    keyboard: true
-                }, 'show');
-                bindForm(this);
-            });
-            return false;
-        });
-    });
-
-    function bindForm(dialog) {
-        $('form', dialog).submit(function () {
-            $.ajax({
-                url: this.action,
-                type: this.method,
-                data: $(this).serialize(),
-                success: function (result) {
-                    if (result.success) {
-                        $('#myModal').modal('hide');
-                        $('#replacetarget').load(result.url); //  Load data from the server and place the returned HTML into the matched element
-                    } else {
-                        $('#myModalContent').html(result);
-                        bindForm(dialog);
-                    }
-                }
-            });
-            return false;
-        });
-    }
-</script>
 
 
 
