--- a/src/EventTrackerAdminWeb/Views/Admin/Households.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Admin/Households.cshtml
@@ -50,7 +50,7 @@
                     </td>
                     <td>
                         <div class="pull-right">
-                            @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-pencil'></span>", "Edit", "EditHousehold", "Household", routeValues: new { houseHoldId = item.HouseHoldId }, htmlAttributes: new { data_modal = "", @class = "btn btn-default" })
+                            @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-pencil'></span>", "Edit", "EditHousehold", "Admin", routeValues: new { houseHoldId = item.HouseHoldId }, htmlAttributes: new { data_modal = "", @class = "btn btn-default" })
                             &nbsp;
                             @*
                                 @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-search'></span>", "Details", "Details", "People", routeValues: new { id = item.HouseHoldId }, htmlAttributes: new { data_modal = "", @class = "btn btn-default" })
