--- a/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
@@ -12,52 +12,53 @@
 
 <div class="panel panel-default">
     <div class="panel-body">
-        @using (Html.BeginForm("Members", "Membership", FormMethod.Get)) {
-            <p>
-                Search: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
-                <input type="submit" value="Search" />
-            </p>
-        }
-        <table class="table table-striped table-condensed table-bordered">
-            <tr>
-                <th class="text-right">
-                    @Html.ActionLink("Last Name", "Members", new {sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter})
-                </th>
-                <th class="text-right">Firstname</th>
-                <th class="text-right">@Html.ActionLink("Member Of", "Members", new { sortOrder = ViewBag.MemberOfSortParm, currentFilter = ViewBag.CurrentFilter })</th>
-                <th class="text-right">@Html.ActionLink("Household", "Members", new { sortOrder = ViewBag.HouseholdSortParm, currentFilter = ViewBag.CurrentFilter })</th>
-            </tr>
-            @foreach (var item in Model)
+                @using (Html.BeginForm("Members", "Membership", FormMethod.Get, new { @class = "pull-left" }))
+                {
+                        <div class="form-inline">
+                            @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control" })
+                            <input type="submit" value="Search" class="form-control btn-primary" />
+                        </div>
+                }
+                <table class="table table-striped table-condensed table-bordered">
+                    <tr>
+                        <th class="text-right">
+                            @Html.ActionLink("Name", "Members", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
+                        </th>
+                        <th class="text-right">@Html.ActionLink("Member Of", "Members", new { sortOrder = ViewBag.MemberOfSortParm, currentFilter = ViewBag.CurrentFilter })</th>
+                        <th class="text-right">@Html.ActionLink("Household", "Members", new { sortOrder = ViewBag.HouseholdSortParm, currentFilter = ViewBag.CurrentFilter })</th>
+                    </tr>
+                    @foreach (var item in Model)
             {
-                <tr>
-                    <td>@Html.ActionLink(item.LastName, "EditMember", new {item.MemberId})</td>
-                    <td class="text-right">@item.FirstName</td>
-                    <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new {memberId = item.MemberId, memberOf = item.MemberOf})</td>
-                @*
-    @if (item.MemberOf == "KFC" || item.MemberOf == "YFC" || item.MemberOf == "SFC" || item.MemberOf=="CFC") {
-        <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
-    }
-    else {
-        <td class="text-right">@item.MemberOf</td>
-    }
-                    *@
+                        <tr>
+                            <td>@Html.ActionLink(item.FullName, "EditMember", new { item.MemberId })</td>
+                            <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
+                            @*
+                            @if (item.MemberOf == "KFC" || item.MemberOf == "YFC" || item.MemberOf == "SFC" || item.MemberOf=="CFC") {
+                                <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
+                            }
+                            else {
+                                <td class="text-right">@item.MemberOf</td>
+                            }
+                            *@
 
-                    <td>
-                        @if (item.HouseHoldId.HasValue) {
-                            @Html.ActionLink(item.HouseholdName, "EditHousehold", new { controller = "HouseHold", houseHoldId = item.HouseHoldId.Value })
-                        }
-                        else {
-                            @item.HouseholdName
-                        }
-                    </td>
+                            <td>
+                                @if (item.HouseHoldId.HasValue)
+                                {
+                                    @Html.ActionLink(item.HouseholdName, "EditHousehold", new { controller = "HouseHold", houseHoldId = item.HouseHoldId.Value })
+                                }
+                                else
+                                {
+                                    @item.HouseholdName
+                                }
+                            </td>
 
-                </tr>
-            }
-        </table>
-        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+                        </tr>
+                    }
+                </table>
+                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-        @Html.PagedListPager(Model, page => Url.Action("Members",
+                @Html.PagedListPager(Model, page => Url.Action("Members",
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
-    </div>
+            </div>
 
 </div>	
