--- a/src/EventTrackerAdminWeb/Views/Admin/Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Admin/Members.cshtml
@@ -1,6 +1,7 @@
 ﻿@*
 @model System.Collections.Generic.IEnumerable<EventTracker.BusinessModel.Membership.Member>
 *@
+@using EventTrackerAdminWeb.Extensions
 @using PagedList.Mvc
 @model PagedList.IPagedList<EventTracker.BusinessModel.Membership.Member>
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
@@ -12,38 +13,43 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        @Html.ActionLink("Add Member", "CreateMember", null,
-            new { @class = "btn btn-default" })
-        @using (Html.BeginForm("Members", "Admin", FormMethod.Get, new { @class = "pull-right" }))
+        @using (Html.BeginForm("Members", "Admin", FormMethod.Get))
         {
-            <div class="form-group">
-                <div class="col-md-8">
-                    @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control" })
+                <div class="row form-inline container-fluid">
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group">
+                                @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = "name" })
+                                <span class="input-group-btn">
+                                    <button title="Click for search" type="submit" class="btn btn-info">
+                                        <i class="glyphicon glyphicon-search"></i>
+                                    </button>
+                                </span>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <input type="submit" value="Search" class="form-control btn-primary" />
-                </div>
-                
-            </div>
-        }
+       }
     </div>
     <div class="panel-body">
 
         <table class="table table-striped table-condensed table-bordered">
             <tr>
-                <th class="text-right">
+                <th class="text-center">
                     @Html.ActionLink("Last Name", "Members", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
                 </th>
-                <th class="text-right">Firstname</th>
-                <th class="text-right">MemberOf</th>
-                <th class="text-right">HH</th>
-                <th class="text-right"></th>
+                <th class="text-center">Member Of</th>
+                <th class="text-center">HH</th>
+                <th class="text-center">
+                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add", "CreateMember", "Admin", null, htmlAttributes: new { @class = "btn btn-primary" })
+                </th>
             </tr>
             @foreach (var item in Model)
         {
                 <tr>
-                    <td>@Html.ActionLink(item.LastName, "EditMember", new { item.MemberId })</td>
-                    <td class="text-right">@item.FirstName</td>
+                    <td>@Html.ActionLink(item.FullName, "EditMember", new { item.MemberId })</td>
                     <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
                     @*
                         @if (item.MemberOf == "KFC" || item.MemberOf == "YFC" || item.MemberOf == "SFC" || item.MemberOf=="CFC") {
