--- a/src/EventTrackerAdminWeb/Views/Admin/_Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Admin/_Members.cshtml
@@ -12,11 +12,11 @@
     @*<table class="table table-striped table-condensed table-bordered">*@
     <table class="table">
         <tr>
-            <th class="text-right">
+            <th class="text-center">
                 @Html.ActionLink("Last Name", "EditHousehold", new { householdId = ViewBag.HouseholdId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId, sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
             </th>
-            <th class="text-right">Firstname</th>
-            <th class="text-right">MemberOf</th>
+            <th class="text-center">Firstname</th>
+            <th class="text-center">MemberOf</th>
             <th>
                 @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Add", "AddMemberToHouseHold", "Admin", routeValues: new { houseHoldId = ViewBag.HouseHoldId, houseHoldLeaderMemberId = ViewBag.HouseHoldLeaderMemberId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right" })
             </th>
